--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   },
   "homepage": "",
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
     "bootstrap-grid": "^2.0.1",
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
